# LLMFactory

./: .gitignore  README.md  inference.py  inference.txt  main.py  pyproject.toml  train.py
.ipynb_checkpoints/: cmd_all_in_one-checkpoint.txt  train-checkpoint.py
configs/: pretrain_20b_mix.json
data/preprocess/: cmd.txt  dataset.py  dolma3_mix-6T.txt  inspect_dataset.py  pretrain_data.py  raw2tokens.py
models/LFM2/: model.py
stats/: token_count_report.txt  token_counts.json
tokenizer/: test_tokenizer.py  to_tiktoken.py
tokenizer/LFM2_5/: tokenizer_config.json
tokenizer/LFM2_5_VL/: chat_template.jinja  tokenizer_config.json
tokenizer/LFM2_5_VL_tiktoken/: example.py  lfm2_5_vl.tiktoken  tokenizer_meta.json
wandb/: latest-run
wandb/run-20260629_011831-nzuk08kx/: run-nzuk08kx.wandb
wandb/run-20260629_011831-nzuk08kx/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260629_013733-sf7u0b9h/: run-sf7u0b9h.wandb
wandb/run-20260629_013733-sf7u0b9h/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260629_014056-8kfn8k5o/: run-8kfn8k5o.wandb
wandb/run-20260629_014056-8kfn8k5o/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
