[project]
name = "llmfactory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
    "wandb>=0.28.0",
    "zstandard>=0.25.0",
]
